@@ -1,5 +1,5 @@
 README:  Tcl
-    This is the Tcl 8.6.0 source distribution.
+    This is the Tcl 8.6.1 source distribution.
 	http://sourceforge.net/projects/tcl/files/Tcl/
     You can get any source release of Tcl from the URL above.
 
